add hutool and junit

--- a/需求文档.md
+++ b/需求文档.md
@@ -26,6 +26,22 @@ update_time       DateTime
 
 deleted               0->未删除  1->已逻辑删除
 
+## 2.功能
+
+### 2.1.注册
+
+1.输入用户名  4 -32位字符
+
+2.输入密码    包含数字，字母，英文符号其中两种 8 - 32位
+
+3.重复密码  
+
+其余非空字段设置默认值
+
+4.密码MD5->HEX加密存储
+
+注册成功返回消息和User对象，方便前端显示账号。
+
 
 
 
