--- a/需求文档.md
+++ b/需求文档.md
@@ -30,7 +30,7 @@ deleted               0->未删除  1->已逻辑删除
 
 ### 2.1.注册
 
-1.输入用户名  4 -32位字符
+1.输入用户名  4 -32位 不包含特殊字符
 
 2.输入密码    包含数字，字母，英文符号其中两种 8 - 32位
 
@@ -41,6 +41,14 @@ deleted               0->未删除  1->已逻辑删除
 4.密码MD5->HEX加密存储
 
 注册成功返回消息和User对象，方便前端显示账号。
+
+校验
+
+1.校验hasBlank
+
+2.校验用户名
+
+3.校验密码
 
 
 
