--- a/需求文档.md
+++ b/需求文档.md
@@ -28,27 +28,215 @@ deleted               0->未删除  1->已逻辑删除
 
 ## 2.功能
 
+检验不通过时抛出对应业务异常。
+
+### 2.0.全局TODO
+
+1.事务处理
+
 ### 2.1.注册
 
-1.输入用户名  4 -32位 不包含特殊字符
+1.输入
 
-2.输入密码    包含数字，字母，英文符号其中两种 8 - 32位
+`String userName, String userPassword, String repeatPassword`
 
-3.重复密码  
+2.校验
 
-其余非空字段设置默认值
+* 参数不能为空、null 、不可字符
+* 用户名合法,4-32位，只能包含数字， 字母，中文
+* 两次密码相同
+* 密码合法
 
-4.密码MD5->HEX加密存储
+3.获取当前最新用户
 
-注册成功返回消息和User对象，方便前端显示账号。
+4.如果没有用户则账号为10000，否则账号加一
 
-校验
+5.创建用户对象，写入数据库
 
-1.校验hasBlank
+6.返回用户对象
 
-2.校验用户名
+### 2.2.登录
 
-3.校验密码
+1.输入
+
+​	`Long userAccount, String userPassword`
+
+2.校验
+
+* 小于100000的账号无法登录
+* 密码不能为空
+* 密码需要合法
+
+3.查询。
+
+​	通过账号和密码从数据库查询。密码加盐MD5加密。
+
+4.返回查询结果。为空抛出业务异常。
+
+#### TODO
+
+实现单点登录，Cookie-Session。
+
+### 2.3.退出
+
+1.输入
+
+​	`Long userAccount`
+
+2.校验
+
+* 校验账号
+
+3.清除Session、JWT
+
+4.返回结果。
+
+#### TODO
+
+实现Cookie-Session、JWT清除
+
+### 2.4.查询
+
+#### 2.4.1查询一个
+
+1.输入
+
+ 	`Long userAccount`
+
+2.校验
+
+* 小于100000直接抛出业务异常
+
+* 账号是否合法
+
+3.查询
+
+4.返回查询结果
+
+#### 2.4.2.查询全部
+
+1.输入
+
+​	无
+
+2.校验
+
+* 只有管理员，才能查询全部。
+
+3.查询
+
+4.返回查询结果
+
+#### 2.4.3.条件查询
+
+1.输入
+
+​	查询条件，性别，时间，用户名模糊匹配...
+
+2.校验
+
+* 性别校验
+* 时间校验，不早于系统时间，不快于当前时间。
+* 用户名校验，同注册用户名校验
+
+3.查询
+
+4.返回结果。
+
+#### TODO
+
+1.查询全部，条件查询的管理员权限鉴别
+
+2.分页查询
+
+### 2.5.修改
+
+1.输入
+
+​	User对象
+
+2.检验
+
+​	对非空字段进行校验
+
+3.写入
+
+​	如果存在记录，对非空字段进行写入
+
+4.返回结果。
+
+#### TODO
+
+1.对于管理员，批量修改
+
+2.普通登录状态可修改自己，鉴权，登录状态。
+
+### 2.6.删除/注销
+
+​	逻辑删除
+
+1.输入
+
+​	`List<Long> userAccount`
+
+2.校验
+
+* 权限校验，如果是管理员，可批量删除，删除别人。否则只能删除自己的账号。
+* 账号校验
+
+3.修改账号deleted字段
+
+4.返回修改结果
+
+#### TODO
+
+自己注销也需要清理Session-Cookie，JWT
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
