add JWT and change ResponseCode

--- a/需求文档.md
+++ b/需求文档.md
@@ -196,6 +196,14 @@ deleted               0->未删除  1->已逻辑删除
 
 
 
+### 2.7.JWT实现单点登录
+
+1.Inter  ceptor拦截所有请求。如果是登录login请求则放行
+
+2.如果是别的请求进行JWT验证。
+
+3.验证成功则放行请求。否则返回业务异常。
+
 
 
 
