create a  file "接口文档.md",and modify a little bug

--- a/接口文档.md
+++ b/接口文档.md
@@ -1,2 +1,192 @@
-### 1.注册
 
+
+## 0.TIPS
+
+#### 0.1.根路径
+
+```java
+root = "http:\\localhost:8080\users"
+// 或者换为项目的实际地址
+```
+
+所有请求路径以这个 root 路径为起始
+
+#### 0.2.返回数据对象
+
+所有接口都会返回 JWTResponse 对象或者 Response 对象的 JSON 串
+
+* **JWTResponse**:需要携带JWT令牌的返回对象
+
+	|   参数名    | 参数类型  | 是否必须 |                       描述                        |
+	| :---------: | :-------: | :------: | :-----------------------------------------------: |
+	|    code     |  Integer  |    是    | 状态码，400开头表示成功，失败会返回失败的状态码。 |
+	|    data     | T（泛型） |    否    |              返回的数据对象，json串               |
+	|   message   |  String   |    是    |               请求结果结果简要描述                |
+	| description |  String   |    是    |                 请求结果详细描述                  |
+	|     jwt     |  String   |    是    |             根据用户数据生成的JWT令牌             |
+
+	示例：
+
+	```json
+	{
+	    "code": 40001,
+	    "data": {
+	        "userAccount": 100001,
+	        "userName": "tina",
+	        "userGender": null,
+	        "userEmail": null,
+	        "userPhone": null,
+	        "userStatus": null,
+	        "userRole": null
+	    },
+	    "message": "注册成功",
+	    "description": "注册成功",
+	    "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2ODQ4MDkyNzAsImp3dERhdGEiOiJ7XCJ1c2VyTmFtZVwiOlwidGluYVwiLFwidXNlckFjY291bnRcIjoxMDAwMDF9In0.Sv2-Jc3ZaJFOMkeWNBe5v13c2wFd_lAZnCRTqlJOrdo"
+	}
+	```
+	
+* **Response**:不需要携带JWT令牌其他数据和 JWTResponse 一样
+	
+	```json
+	{
+	    "code": 40001,
+	    "data": "",
+	    "message": "",
+	    "description": ""
+	}
+	```
+	
+	
+
+## 1.注册
+
+### 1.1.基本描述
+
+>功能描述：注册用户，注册成功返回 包含用户数据的JWTResponse。
+>
+>请求路径：\register
+>
+>请求方法：POST
+
+### 1.2.请求参数
+
+> 格式：application/x-www-form-urlencoded
+
+参数说明：
+
+|     参数名     | 参数类型 | 是否必须 |    描述    |
+| :------------: | :------: | :------: | :--------: |
+|    userName    |  String  |    是    |  用户名。  |
+|  userPassword  |  String  |    是    |   密码。   |
+| repeatPassword |  String  |    是    | 重复密码。 |
+
+请求参数示例：
+```json
+userName:tina
+userPassword:1234abcd
+repeatPassword:1234abcd
+```
+
+### 1.3.响应数据
+
+> 格式：application/json
+>
+> 数据对象：JWTResponse
+
+data数据参数说明：
+
+|   参数名    | 参数类型 | 是否必须 |           描述           |
+| :---------: | :------: | :------: | :----------------------: |
+| userAccount |   Long   |    是    |         用户账号         |
+|  userName   |  String  |    是    |         用户密码         |
+| userGender  | Integer  |    是    |    用户性别 0-女 1-男    |
+|  userEmail  |  String  |    否    |         用户邮箱         |
+|  userPhone  |  String  |    否    |        用户手机号        |
+| userStatus  | Integer  |    是    |  用户状态 0-正常 1-封禁  |
+|  userRole   | Integer  |    是    | 用户角色 0-用户 1-管理员 |
+
+响应示例：
+
+```json
+{
+    "code": 40001,
+    "data": {
+        "userAccount": 100002,
+        "userName": "tina",
+        "userGender": 1,
+        "userEmail": null,
+        "userPhone": null,
+        "userStatus": null,
+        "userRole": 0
+    },
+    "message": "注册成功",
+    "description": "注册成功",
+    "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2ODQ4MTIxNzcsImp3dERhdGEiOiJ7XCJ1c2VyTmFtZVwiOlwidGluYVwiLFwidXNlckFjY291bnRcIjoxMDAwMDIsXCJ1c2VyUm9sZVwiOjB9In0.j9kuwmAgcP1dMLsKHcy-BPymJVsOI9zNZMDGaJm7YWY"
+}
+```
+
+## 2.登录
+
+### 2.1.基本描述
+
+> 功能描述：用户登录，登录成功返回JWTResponse。
+>
+> 请求路径：\users\login
+>
+> 请求方法：POST
+
+### 2.2.请求参数
+
+> 格式：application/x-www-form-urlencoded
+
+参数说明：
+
+|    参数名    | 参数类型 | 是否必须 |   描述   |
+| :----------: | :------: | :------: | :------: |
+| userAccount  |   Long   |    是    | 用户账号 |
+| userPassword |  String  |    是    | 用户密码 |
+
+请求参数示例：
+
+```json
+userAccount:100002
+userPassword:1234abcd
+```
+
+### 2.3.响应数据
+
+> 格式：application/json
+>
+> 数据对象：JWTResponse
+
+data参数说明：
+
+| userAccount |  Long   |  是  |         用户账号         |
+| :---------: | :-----: | :--: | :----------------------: |
+|  userName   | String  |  是  |         用户密码         |
+| userGender  | Integer |  是  |    用户性别 0-女 1-男    |
+|  userEmail  | String  |  否  |         用户邮箱         |
+|  userPhone  | String  |  否  |        用户手机号        |
+| userStatus  | Integer |  是  |  用户状态 0-正常 1-封禁  |
+|  userRole   | Integer |  是  | 用户角色 0-用户 1-管理员 |
+
+响应示例：
+```json
+{
+    "code": 40002,
+    "data": {
+        "userAccount": 100002,
+        "userName": "tina",
+        "userGender": 1,
+        "userEmail": null,
+        "userPhone": null,
+        "userStatus": 0,
+        "userRole": 0
+    },
+    "message": "登录成功",
+    "description": "登录成功",
+    "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2ODQ4MTIzNjYsImp3dERhdGEiOiJ7XCJ1c2VyTmFtZVwiOlwidGluYVwiLFwidXNlckFjY291bnRcIjoxMDAwMDIsXCJ1c2VyUm9sZVwiOjB9In0.uq35nSvMeU8jaoU3wYVnsnmOSMxP1FQc4fYjuc8_CXw"
+}
+```
+
+3.
