--- a/接口文档.md
+++ b/接口文档.md
@@ -17,13 +17,13 @@ root = "http:\\localhost:8080\users"
 
 * **JWTResponse**:需要携带JWT令牌的返回对象
 
-	|   参数名    | 参数类型  | 是否必须 |                       描述                        |
+	|   参数名    | 参数类型  | 是否可空 |                       描述                        |
 	| :---------: | :-------: | :------: | :-----------------------------------------------: |
-	|    code     |  Integer  |    是    | 状态码，400开头表示成功，失败会返回失败的状态码。 |
-	|    data     | T（泛型） |    否    |              返回的数据对象，json串               |
-	|   message   |  String   |    是    |               请求结果结果简要描述                |
-	| description |  String   |    是    |                 请求结果详细描述                  |
-	|     jwt     |  String   |    是    |             根据用户数据生成的JWT令牌             |
+	|    code     |  Integer  |    否    | 状态码，400开头表示成功，失败会返回失败的状态码。 |
+	|    data     | T（泛型） |    是    |              返回的数据对象，json串               |
+	|   message   |  String   |    否    |               请求结果结果简要描述                |
+	| description |  String   |    否    |                 请求结果详细描述                  |
+	|     jwt     |  String   |    否    |             根据用户数据生成的JWT令牌             |
 
 	示例：
 
@@ -36,8 +36,8 @@ root = "http:\\localhost:8080\users"
 	        "userGender": null,
 	        "userEmail": null,
 	        "userPhone": null,
-	        "userStatus": null,
-	        "userRole": null
+	        "userStatus": 0,
+	        "userRole": 1
 	    },
 	    "message": "注册成功",
 	    "description": "注册成功",
@@ -50,19 +50,29 @@ root = "http:\\localhost:8080\users"
 	```json
 	{
 	    "code": 40001,
-	    "data": "",
+	    "data": null,
 	    "message": "",
 	    "description": ""
 	}
 	```
 	
+* **data参数**：用户信息
+	
+	| userAccount |  Long   | 是否可空 |         用户账号         |
+	| :---------: | :-----: | :------: | :----------------------: |
+	|  userName   | String  |    否    |         用户密码         |
+	| userGender  | Integer |    否    |    用户性别 0-女 1-男    |
+	|  userEmail  | String  |    是    |         用户邮箱         |
+	|  userPhone  | String  |    是    |        用户手机号        |
+	| userStatus  | Integer |    否    |  用户状态 0-正常 1-封禁  |
+	|  userRole   | Integer |    否    | 用户角色 0-用户 1-管理员 |
 	
 
 ## 1.注册
 
 ### 1.1.基本描述
 
->功能描述：注册用户，注册成功返回 包含用户数据的JWTResponse。
+>功能描述：注册用户。
 >
 >请求路径：\register
 >
@@ -74,11 +84,11 @@ root = "http:\\localhost:8080\users"
 
 参数说明：
 
-|     参数名     | 参数类型 | 是否必须 |    描述    |
+|     参数名     | 参数类型 | 是否可空 |    描述    |
 | :------------: | :------: | :------: | :--------: |
-|    userName    |  String  |    是    |  用户名。  |
-|  userPassword  |  String  |    是    |   密码。   |
-| repeatPassword |  String  |    是    | 重复密码。 |
+|    userName    |  String  |    否    |  用户名。  |
+|  userPassword  |  String  |    否    |   密码。   |
+| repeatPassword |  String  |    否    | 重复密码。 |
 
 请求参数示例：
 ```json
@@ -91,21 +101,9 @@ repeatPassword:1234abcd
 
 > 格式：application/json
 >
-> 数据对象：JWTResponse
+> 数据对象：JWTResponse/Response
 
-data数据参数说明：
-
-|   参数名    | 参数类型 | 是否必须 |           描述           |
-| :---------: | :------: | :------: | :----------------------: |
-| userAccount |   Long   |    是    |         用户账号         |
-|  userName   |  String  |    是    |         用户密码         |
-| userGender  | Integer  |    是    |    用户性别 0-女 1-男    |
-|  userEmail  |  String  |    否    |         用户邮箱         |
-|  userPhone  |  String  |    否    |        用户手机号        |
-| userStatus  | Integer  |    是    |  用户状态 0-正常 1-封禁  |
-|  userRole   | Integer  |    是    | 用户角色 0-用户 1-管理员 |
-
-响应示例：
+响应示例：注册成功
 
 ```json
 {
@@ -116,7 +114,7 @@ data数据参数说明：
         "userGender": 1,
         "userEmail": null,
         "userPhone": null,
-        "userStatus": null,
+        "userStatus": 0,
         "userRole": 0
     },
     "message": "注册成功",
@@ -125,13 +123,26 @@ data数据参数说明：
 }
 ```
 
+响应示例：注册失败
+
+```json
+{
+    "code": 40101,
+    "data": null,
+    "message": "注册失败",
+    "description": "用户名长度应为4-32位，不能包含特殊字符"
+}
+```
+
+
+
 ## 2.登录
 
 ### 2.1.基本描述
 
-> 功能描述：用户登录，登录成功返回JWTResponse。
+> 功能描述：用户登录。
 >
-> 请求路径：\users\login
+> 请求路径：\login
 >
 > 请求方法：POST
 
@@ -141,10 +152,10 @@ data数据参数说明：
 
 参数说明：
 
-|    参数名    | 参数类型 | 是否必须 |   描述   |
+|    参数名    | 参数类型 | 是否可空 |   描述   |
 | :----------: | :------: | :------: | :------: |
-| userAccount  |   Long   |    是    | 用户账号 |
-| userPassword |  String  |    是    | 用户密码 |
+| userAccount  |   Long   |    否    | 用户账号 |
+| userPassword |  String  |    否    | 用户密码 |
 
 请求参数示例：
 
@@ -157,20 +168,9 @@ userPassword:1234abcd
 
 > 格式：application/json
 >
-> 数据对象：JWTResponse
+> 数据对象：JWTResponse/Response
 
-data参数说明：
-
-| userAccount |  Long   |  是  |         用户账号         |
-| :---------: | :-----: | :--: | :----------------------: |
-|  userName   | String  |  是  |         用户密码         |
-| userGender  | Integer |  是  |    用户性别 0-女 1-男    |
-|  userEmail  | String  |  否  |         用户邮箱         |
-|  userPhone  | String  |  否  |        用户手机号        |
-| userStatus  | Integer |  是  |  用户状态 0-正常 1-封禁  |
-|  userRole   | Integer |  是  | 用户角色 0-用户 1-管理员 |
-
-响应示例：
+响应示例：登录成功
 ```json
 {
     "code": 40002,
@@ -189,4 +189,326 @@ data参数说明：
 }
 ```
 
-3.
+响应示例：登录失败
+
+```json
+{
+    "code": 40201,
+    "data": null,
+    "message": "登录失败",
+    "description": "账号或密码错误"
+}
+```
+
+响应案例：登录过期
+
+```json
+{
+    "code": 40202,
+    "data": null,
+    "message": "登录过期",
+    "description": "登录过期，请重新登录"
+}
+```
+
+## 3.根据账号查询
+
+### 3.1.基本描述
+
+> 功能描述：**管理员**可以根据账号查询用户。
+>
+> 请求路径：\select\\{userAccount}
+>
+> 请求方法：GET
+
+### 3.2.请求参数
+
+> 参数格式：路径参数
+>
+> 需要 token 携带 JWT令牌
+
+参数说明：
+
+|   参数名    | 参数类型 | 是否可空 |   描述   |
+| :---------: | :------: | :------: | :------: |
+| userAccount |   Long   |    否    | 用户账号 |
+
+请求参数示例
+
+```json
+\users\100001
+```
+
+### 3.3.响应数据
+
+> 参数格式：application/json
+>
+> 数据对象：Response
+
+响应示例：用户不存在
+
+```json
+{
+    "code": 40301,
+    "data": null,
+    "message": "查询失败",
+    "description": "不存在该用户"
+}
+```
+
+响应示例：查询成功
+
+```json
+{
+    "code": 40003,
+    "data": {
+        "userAccount": 100001,
+        "userName": "tina",
+        "userGender": 1,
+        "userEmail": null,
+        "userPhone": null,
+        "userStatus": 0,
+        "userRole": 0
+    },
+    "message": "查询成功",
+    "description": "查询成功"
+}
+```
+
+## 4.查询全部
+
+### 4.1.基本描述
+
+> 功能描述：**管理员**可以查询所有用户。
+>
+> 请求路径：\selectAll
+>
+> 请求方法：GET
+
+### 4.2.请求参数
+
+> 无请求参数
+>
+> 需要 token 携带 JWT令牌
+
+### 4.3.响应数据
+
+> 响应格式：application/json
+>
+> 数据对象：Response
+
+响应示例：查询成功
+
+```json
+{
+    "code": 40003,
+    "data": [
+        {
+            "userAccount": 100000,
+            "userName": "serria",
+            "userGender": 1,
+            "userEmail": null,
+            "userPhone": null,
+            "userStatus": 0,
+            "userRole": 1
+        },
+        {
+            "userAccount": 100001,
+            "userName": "tina",
+            "userGender": 1,
+            "userEmail": null,
+            "userPhone": null,
+            "userStatus": 0,
+            "userRole": 0
+        },
+        {
+            "userAccount": 100002,
+            "userName": "tina",
+            "userGender": 1,
+            "userEmail": null,
+            "userPhone": null,
+            "userStatus": 0,
+            "userRole": 0
+        }
+    ],
+    "message": "查询成功",
+    "description": "查询成功"
+}
+```
+
+## 5.修改
+
+### 5.1.基本描述
+
+> 功能描述：用户修改，没修改的字段为null。
+>
+> 请求路径：\modify
+>
+> 请求方法：PUT
+
+### 5.2.请求参数
+
+> 参数格式：application/json
+>
+> 需要 token 携带 JWT令牌
+
+参数说明：data参数
+
+参数示例：
+```json
+{
+    "userAccount": 100001,
+    "userName": "Christina",
+    "userGender": 1,
+    "userEmail": "test@gmail.com",
+    "userPhone": null,
+    "userStatus": 0,
+    "userRole": 0
+}
+```
+
+### 5.3.响应数据
+
+> 参数格式：application/json
+>
+> 数据对象：JWTResponse/Response
+
+响应示例：修改失败
+
+```json
+{
+    "code": 40501,
+    "data": null,
+    "message": "修改失败",
+    "description": "修改失败，请检查修改的值是否合法"
+}
+```
+
+响应示例：修改成功
+
+```json
+{
+    "code": 40005,
+    "data": {
+        "userAccount": 100001,
+        "userName": "Christina",
+        "userGender": 1,
+        "userEmail": "test@gmail.com",
+        "userPhone": "14422233333",
+        "userStatus": 0,
+        "userRole": 0
+    },
+    "message": "修改成功",
+    "description": "修改成功",
+    "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2ODQ4MzAyNjQsImp3dERhdGEiOiJ7XCJ1c2VyTmFtZVwiOlwiQ2hyaXN0aW5hXCIsXCJ1c2VyQWNjb3VudFwiOjEwMDAwMSxcInVzZXJSb2xlXCI6MH0ifQ.3KKhSwuZ1ghIf85l_kek7cG3ukgZPcXwmTA0r_fHR6w"
+}
+```
+
+## 6.用户注销
+
+### 6.1.基本描述
+
+> 功能描述：用户可以注销自己的账号，需要 token 携带 JWT 。
+>
+> 请求路径：\delete
+>
+> 请求方法：DELETE
+
+### 6.2.请求参数
+
+> 无请求参数
+>
+> 需要 token 携带 JWT令牌
+
+### 6.3.响应数据 
+
+> 格式类型：application/json
+>
+> 数据对象：JWTResponse
+
+响应示例：注销成功
+
+```json
+{
+    "code": 40004,
+    "data": null,
+    "message": "注销成功",
+    "description": "注销成功"
+}
+```
+
+## 7.批量注销
+
+### 7.1.基本描述
+
+> 功能描述：**管理员**可以批量注销用户。
+>
+> 请求路径：\deleteAll
+>
+> 请求方法： DELETE
+
+### 7.2.请求参数
+
+> 参数格式：queryString
+
+参数示例：
+
+```
+\deleteAll?userAccountList=100002,100003,100004
+```
+
+### 7.3.响应参数
+
+> 响应格式：application/json
+>
+> 数据对象：Response
+
+响应示例：注销成功
+
+```json
+{
+    "code": 40004,
+    "data": null,
+    "message": "注销成功",
+    "description": "删除成功"
+}
+```
+
+## 8.封禁用户
+
+### 8.1.基本描述
+
+> 功能描述：**管理员**可以封禁用户。
+>
+> 请求路径：\banAll
+>
+> 请求方法：PUT
+
+### 8.2.请求参数
+
+> 请求格式：queryString
+>
+> 需要 token 携带 JWT令牌
+
+请求示例：
+```
+\banAll?userAccountList=100002,100003,100004
+```
+
+### 8.3.响应示例
+
+> 响应格式：application/json
+>
+> 响应对象：Response
+
+响应示例：封禁成功
+
+```json
+{
+    "code": 40006,
+    "data": null,
+    "message": "封禁成功",
+    "description": "封禁成功"
+}
+```
+
