add some TODO in "需求文档.md"

--- a/需求文档.md
+++ b/需求文档.md
@@ -30,9 +30,17 @@ deleted               0->未删除  1->已逻辑删除
 
 检验不通过时抛出对应业务异常。
 
-### 2.0.全局TODO
+### 2.0.TODO
 
-1.事务处理
+1.分页查询
+
+2.管理员可修改其他用户
+
+3.条件查询
+
+4.用户信息添加头像，存储的是图床的URL
+
+5.日志
 
 ### 2.1.注册
 
@@ -73,10 +81,6 @@ deleted               0->未删除  1->已逻辑删除
 
 4.返回查询结果。为空抛出业务异常。
 
-#### TODO
-
-实现单点登录，Cookie-Session。
-
 ### 2.3.退出
 
 1.输入
@@ -92,10 +96,6 @@ deleted               0->未删除  1->已逻辑删除
 4.返回结果。
 
 由前端实现，清除JWT令牌。
-
-#### TODO
-
-实现Cookie-Session、JWT清除
 
 ### 2.4.查询
 
@@ -145,12 +145,6 @@ deleted               0->未删除  1->已逻辑删除
 
 4.返回结果。
 
-#### TODO
-
-1.查询全部，条件查询的管理员权限鉴别
-
-2.分页查询
-
 ### 2.5.修改
 
 1.输入
@@ -169,12 +163,6 @@ deleted               0->未删除  1->已逻辑删除
 
 4.返回结果。
 
-#### TODO
-
-1.对于管理员，批量修改
-
-2.普通登录状态可修改自己，鉴权，登录状态。
-
 ### 2.6.删除/注销
 
 ​	逻辑删除
@@ -191,12 +179,6 @@ deleted               0->未删除  1->已逻辑删除
 3.修改账号deleted字段
 
 4.返回修改结果
-
-#### TODO
-
-自己注销也需要清理Session-Cookie，JWT
-
-
 
 ### 2.7.JWT实现单点登录
 
